--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link
       rel="stylesheet"
       media="screen and (max-width : 768px)"
-      href="/mobile.css"
+      href="./mobile.css"
     />
     <script
       src="https://kit.fontawesome.com/461138fbaa.js"
